# advent-of-code

./: .envrc  .gitignore  .perltidyrc  .pre-commit-config.yaml  Cargo.toml  README.md  justfile  lint  pyproject.toml  run
2022/02/: Cargo.toml
2022/02/src/util/: game.rs  mod.rs  outcome.rs  play.rs
2022/03/src/: main.rs
2022/04/: Cargo.toml
2022/04/src/: main.rs
2022/05/: Cargo.toml
2022/05/src/: main.rs
2022/06/: Cargo.toml
2022/06/src/: main.rs
2022/07/: Cargo.toml
2022/07/src/: main.rs
2022/08/: Cargo.toml
2022/08/src/: main.rs
2023/: day01  day01.pl  day02.pl  day03.pl  day04.pl
2023/01_trebuchet/: solve.pl
2023/02_cube_conundrum/: solve.pl
2023/03_gear_ratios/: solve.pl
2023/04_scratchcards/: puzzle.md  solve.pl
2023/05_almanac/: puzzle.md  solve.pl
2023/06_boat_races/: solve.pl
2023/07_camel_cards/: solve.pl
2023/08_btree_network/: solve.pl
2023/09_oasis/: solve.pl
2023/10_da_pipes/: solve.pl
2023/11_cosmic_expansion/: solve.pl
2023/xx_tbd/: solve.pl
aoc/problems/01_historian_hysteria/: part1.py  part2.py  test_part1.py  test_part2.py
aoc/problems/02_red_nosed_reports/: part1.py  part2.py  test_part1.py  test_part2.py
aoc/util/: input.py
days/01/src/: main.rs
days/02/src/: main.rs
days/02/src/util/: game.rs  outcome.rs  play.rs
days/03/: Cargo.toml
days/03/src/: main.rs
lib/AOC/: Base.pm  Math.pm
