[tool.poetry]
name = "aoc"
version = "0.1.0"
description = ""
authors = ["Carter <me@fyko.net>"]
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = "^3.12"
pytest = "^8.3.4"
ruff = "^0.8.1"
pre-commit = "^4.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
